ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-demo-ingress
spec:
  rules:
  - host: "argo.url.com"
    http:
      paths:
      - pathType: Prefix
        path: "/helloworld"
        backend:
          service:
            name: jboss-helloworld-service
            port:
              number: 80
